2003-05-02  Sidnei da Silva  <sidnei@x3ng.com>

	* rlpdf/rlpdf.py (Writer.translate): use StringIO as output for
	Reportlab and set the output to the writer output.
	(PDFTranslator.visit_title): Fix weird logic. node.parent['id']
	didnt always existed.
